@@ -3,23 +3,25 @@ package com.dpw.runner.shipment.services.aspects.PermissionsValidationAspect;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.ShipmentSettingsDetailsContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantSettingsDetailsContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
-import com.dpw.runner.shipment.services.commons.requests.CommonRequestModel;
-import com.dpw.runner.shipment.services.dto.request.ConsolidationDetailsRequest;
-import com.dpw.runner.shipment.services.dto.request.ShipmentRequest;
 import com.dpw.runner.shipment.services.dto.request.UsersDto;
+import com.dpw.runner.shipment.services.dto.response.ConsolidationDetailsResponse;
+import com.dpw.runner.shipment.services.dto.response.ShipmentDetailsResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.V1TenantSettingsResponse;
 import com.dpw.runner.shipment.services.entity.ConsolidationDetails;
 import com.dpw.runner.shipment.services.entity.ShipmentDetails;
 import com.dpw.runner.shipment.services.entity.ShipmentSettingsDetails;
-import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
-import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
+import com.dpw.runner.shipment.services.helper.JsonTestUtility;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.aspectj.lang.JoinPoint;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.parallel.Execution;
 import org.junit.jupiter.api.parallel.ExecutionMode;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -37,67 +39,30 @@ class RetrieveValidateAspectTest {
     @Mock
     private JoinPoint joinPoint;
 
+    private static ObjectMapper objectMapper;
+
+    @BeforeAll
+    public static void init() {
+        objectMapper = JsonTestUtility.getMapper();
+    }
+
+
     @BeforeEach
     public void setUp() {
         retrieveValidateAspect = new RetrieveValidateAspect();
     }
 
 
-    @Test
-    void testCreateShipmentAspect() throws RunnerException {
+    @ParameterizedTest
+    @ValueSource(strings = {"Shipments:Retrive:All Shipment:AllShipmentRetrive", "Operations:Shipments:AIR:Export:Create",
+            "Operations:Shipments:AIR:Export:View", "Operations:Shipments:AIR:Export:Modify", "Operations:Shipments:AIR:Export:Cancel"})
+    void testCreateShipmentAspectShouldSuccessfullyReturn(String permission) throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:All Shipment:AllShipmentRetrive")));
-        ShipmentDetails mockShipment = new ShipmentDetails();
-        TenantSettingsDetailsContext.setCurrentTenantSettings(
-                V1TenantSettingsResponse.builder().P100Branch(false).build());
-        mockShipment.setShipmentId("AIR-CAN-00001");
-        mockShipment.setId(1L).setGuid(UUID.randomUUID());
-        mockShipment.setTransportMode("SEA");
-        mockShipment.setIsDomestic(false);
-        mockShipment.setDirection("EXP");
-        mockShipment.setShipmentType("FCL");
-        ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
-        Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
-        retrieveValidateAspect = new RetrieveValidateAspect();
-        retrieveValidateAspect.validateShipmentRetrieve(shipmentDetails);
-        assert (true);
-    }
-
-    @Test
-    void testCreateShipmentAspect2() throws RunnerException {
-        UsersDto mockUser = new UsersDto();
-        mockUser.setTenantId(1);
-        mockUser.setUsername("user");
-        mockUser.setPermissions(new HashMap<>());
-        UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
-        ShipmentDetails mockShipment = new ShipmentDetails();
-        TenantSettingsDetailsContext.setCurrentTenantSettings(
-                V1TenantSettingsResponse.builder().P100Branch(false).build());
-        mockShipment.setShipmentId("AIR-CAN-00001");
-        mockShipment.setId(1L).setGuid(UUID.randomUUID());
-        mockShipment.setTransportMode("SEA");
-        mockShipment.setIsDomestic(false);
-        mockShipment.setDirection("EXP");
-        mockShipment.setShipmentType("FCL");
-        ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
-        Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
-        retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(RunnerException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetails));
-    }
-
-    @Test
-    void testCreateShipmentAspect3() throws RunnerException {
-        UsersDto mockUser = new UsersDto();
-        mockUser.setTenantId(1);
-        mockUser.setUsername("user");
-        mockUser.setPermissions(new HashMap<>());
-        UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList(permission)));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -110,17 +75,64 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(RunnerException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetails));
+        retrieveValidateAspect.validateShipmentRetrieve(objectMapper.convertValue(shipmentDetails, ShipmentDetailsResponse.class));
+        assert (true);
     }
 
     @Test
-    void testCreateShipmentAspect4() throws RunnerException {
+    void testCreateShipmentAspect2() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        ShipmentDetails mockShipment = new ShipmentDetails();
+        TenantSettingsDetailsContext.setCurrentTenantSettings(
+                V1TenantSettingsResponse.builder().P100Branch(false).build());
+        mockShipment.setShipmentId("AIR-CAN-00001");
+        mockShipment.setId(1L).setGuid(UUID.randomUUID());
+        mockShipment.setTransportMode("SEA");
+        mockShipment.setIsDomestic(false);
+        mockShipment.setDirection("EXP");
+        mockShipment.setShipmentType("FCL");
+        ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
+        retrieveValidateAspect = new RetrieveValidateAspect();
+        ShipmentDetailsResponse shipmentDetailsResponse = objectMapper.convertValue(mockShipment, ShipmentDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetailsResponse));
+    }
+
+    @Test
+    void testCreateShipmentAspect3() throws ValidationException {
+        UsersDto mockUser = new UsersDto();
+        mockUser.setTenantId(1);
+        mockUser.setUsername("user");
+        mockUser.setPermissions(new HashMap<>());
+        UserContext.setUser(mockUser);
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        ShipmentDetails mockShipment = new ShipmentDetails();
+        TenantSettingsDetailsContext.setCurrentTenantSettings(
+                V1TenantSettingsResponse.builder().P100Branch(false).build());
+        mockShipment.setShipmentId("AIR-CAN-00001");
+        mockShipment.setId(1L).setGuid(UUID.randomUUID());
+        mockShipment.setTransportMode("AIR");
+        mockShipment.setIsDomestic(false);
+        mockShipment.setDirection("EXP");
+        mockShipment.setShipmentType("FCL");
+        ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
+        retrieveValidateAspect = new RetrieveValidateAspect();
+        ShipmentDetailsResponse shipmentDetailsResponse = objectMapper.convertValue(mockShipment, ShipmentDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetailsResponse));
+    }
+
+    @Test
+    void testCreateShipmentAspect4() throws ValidationException {
+        UsersDto mockUser = new UsersDto();
+        mockUser.setTenantId(1);
+        mockUser.setUsername("user");
+        mockUser.setPermissions(new HashMap<>());
+        UserContext.setUser(mockUser);
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -133,18 +145,18 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        retrieveValidateAspect.validateShipmentRetrieve(shipmentDetails);
+        retrieveValidateAspect.validateShipmentRetrieve(objectMapper.convertValue(shipmentDetails, ShipmentDetailsResponse.class));
         assertNotNull(shipmentDetails);
     }
 
     @Test
-    void testCreateShipmentAspect5() throws RunnerException {
+    void testCreateShipmentAspect5() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -153,12 +165,12 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        retrieveValidateAspect.validateShipmentRetrieve(shipmentDetails);
+        retrieveValidateAspect.validateShipmentRetrieve(objectMapper.convertValue(shipmentDetails, ShipmentDetailsResponse.class));
         assertNotNull(shipmentDetails);
     }
 
     @Test
-    void testCreateShipmentAspectException() throws RunnerException {
+    void testCreateShipmentAspectException() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
@@ -177,17 +189,18 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(RunnerException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetails));
+        ShipmentDetailsResponse shipmentDetailsResponse = objectMapper.convertValue(shipmentDetails, ShipmentDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetailsResponse));
     }
 
     @Test
-    void testCreateConsolidationAspect() throws RunnerException {
+    void testCreateConsolidationAspect() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:All Consolidation:AllConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:All Consolidation:AllConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -200,18 +213,18 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetails);
+        retrieveValidateAspect.validateConsolidationRetrieve(objectMapper.convertValue(consolidationDetails, ConsolidationDetailsResponse.class));
         assert (true);
     }
 
     @Test
-    void testCreateConsolidationAspect2() throws RunnerException {
+    void testCreateConsolidationAspect2() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -222,19 +235,19 @@ class RetrieveValidateAspectTest {
         mockConsolidation.setShipmentType("EXP");
         mockConsolidation.setContainerCategory("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
-        Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(RunnerException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetails));
+        ConsolidationDetailsResponse consolidationDetailsResponse = objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetailsResponse));
     }
 
     @Test
-    void testCreateConsolidationAspect3() throws RunnerException {
+    void testCreateConsolidationAspect3() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -245,19 +258,19 @@ class RetrieveValidateAspectTest {
         mockConsolidation.setShipmentType("EXP");
         mockConsolidation.setContainerCategory("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
-        Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(RunnerException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetails));
+        ConsolidationDetailsResponse consolidationDetailsResponse = objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetailsResponse));
     }
 
     @Test
-    void testCreateConsolidationAspect4() throws RunnerException {
+    void testCreateConsolidationAspect4() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -270,18 +283,18 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetails);
+        retrieveValidateAspect.validateConsolidationRetrieve(objectMapper.convertValue(consolidationDetails, ConsolidationDetailsResponse.class));
         assertNotNull(consolidationDetails);
     }
 
     @Test
-    void testCreateConsolidationAspect5() throws RunnerException {
+    void testCreateConsolidationAspect5() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -290,12 +303,12 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetails);
+        retrieveValidateAspect.validateConsolidationRetrieve(objectMapper.convertValue(consolidationDetails, ConsolidationDetailsResponse.class));
         assertNotNull(consolidationDetails);
     }
 
     @Test
-    void testCreateConsolidationAspectException() throws RunnerException {
+    void testCreateConsolidationAspectException() throws ValidationException {
         UsersDto mockUser = new UsersDto();
         mockUser.setTenantId(1);
         mockUser.setUsername("user");
@@ -312,8 +325,8 @@ class RetrieveValidateAspectTest {
         mockConsolidation.setShipmentType("EXP");
         mockConsolidation.setContainerCategory("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
-        Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(RunnerException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetails));
+        ConsolidationDetailsResponse consolidationDetailsResponse = objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetailsResponse));
     }
 }
