@@ -8,7 +8,6 @@ import com.dpw.runner.shipment.services.dto.request.ShipmentRequest;
 import com.dpw.runner.shipment.services.dto.request.UsersDto;
 import com.dpw.runner.shipment.services.dto.response.ShipmentDetailsResponse;
 import org.aspectj.lang.ProceedingJoinPoint;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,11 +19,11 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
@@ -51,7 +50,7 @@ class TenantTimeZoneAspectTest {
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
         ShipmentRequest shipmentRequest = new ShipmentRequest();
-        shipmentRequest.setContainersList(new ArrayList<>(Arrays.asList(new ContainerRequest())));
+        shipmentRequest.setContainersList(new HashSet<>(List.of(new ContainerRequest())));
         shipmentRequest.setCarrierDetails(CarrierDetailRequest.builder().build());
         shipmentRequest.setShipmentCreatedOn(LocalDateTime.now());
         CommonRequestModel request = CommonRequestModel.builder().data(shipmentRequest).build();
@@ -61,7 +60,6 @@ class TenantTimeZoneAspectTest {
         ResponseEntity<?> responseEntity = new ResponseEntity<>(shipmentDetailsResponse, HttpStatus.OK);
         when(proceedingJoinPoint.proceed(any())).thenReturn(responseEntity);
         tenantTimeZoneAspect = new TenantTimeZoneAspect();
-        tenantTimeZoneAspect.changeTimeZone(proceedingJoinPoint);
-        assert (true);
+        assertDoesNotThrow(() ->tenantTimeZoneAspect.changeTimeZone(proceedingJoinPoint));
     }
 }
