@@ -1,55 +1,15 @@
 package com.dpw.runner.shipment.services.service.impl;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.parallel.ExecutionMode.CONCURRENT;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.spy;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import com.dpw.runner.shipment.services.CommonMocks;
-import com.dpw.runner.shipment.services.kafka.dto.KafkaResponse;
-import com.dpw.runner.shipment.services.kafka.producer.KafkaProducer;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.ShipmentSettingsDetailsContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantSettingsDetailsContext;
 import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
 import com.dpw.runner.shipment.services.commons.constants.Constants;
-import com.dpw.runner.shipment.services.commons.requests.AuditLogMetaData;
-import com.dpw.runner.shipment.services.commons.requests.BulkDownloadRequest;
-import com.dpw.runner.shipment.services.commons.requests.BulkUploadRequest;
-import com.dpw.runner.shipment.services.commons.requests.CommonGetRequest;
-import com.dpw.runner.shipment.services.commons.requests.CommonRequestModel;
-import com.dpw.runner.shipment.services.commons.requests.ExportContainerListRequest;
-import com.dpw.runner.shipment.services.commons.requests.ListCommonRequest;
+import com.dpw.runner.shipment.services.commons.requests.*;
 import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.commons.responses.RunnerResponse;
-import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
-import com.dpw.runner.shipment.services.dao.interfaces.IContainerDao;
-import com.dpw.runner.shipment.services.dao.interfaces.ICustomerBookingDao;
-import com.dpw.runner.shipment.services.dao.interfaces.IEventDao;
-import com.dpw.runner.shipment.services.dao.interfaces.IPackingDao;
-import com.dpw.runner.shipment.services.dao.interfaces.IShipmentDao;
-import com.dpw.runner.shipment.services.dao.interfaces.IShipmentSettingsDao;
-import com.dpw.runner.shipment.services.dao.interfaces.IShipmentsContainersMappingDao;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.CheckAllocatedDataChangesRequest;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerAssignListRequest;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerNumberCheckResponse;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerPackADInShipmentRequest;
-import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.ContainerSummaryResponse;
+import com.dpw.runner.shipment.services.dao.interfaces.*;
+import com.dpw.runner.shipment.services.dto.CalculationAPIsDto.*;
 import com.dpw.runner.shipment.services.dto.request.ContainerEventExcelModel;
 import com.dpw.runner.shipment.services.dto.request.ContainerRequest;
 import com.dpw.runner.shipment.services.dto.request.ContainersExcelModel;
@@ -57,18 +17,16 @@ import com.dpw.runner.shipment.services.dto.request.UsersDto;
 import com.dpw.runner.shipment.services.dto.response.ContainerResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.V1DataResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.V1TenantSettingsResponse;
-import com.dpw.runner.shipment.services.entity.ConsolidationDetails;
-import com.dpw.runner.shipment.services.entity.Containers;
-import com.dpw.runner.shipment.services.entity.Packing;
-import com.dpw.runner.shipment.services.entity.ShipmentDetails;
-import com.dpw.runner.shipment.services.entity.ShipmentSettingsDetails;
-import com.dpw.runner.shipment.services.entity.ShipmentsContainersMapping;
+import com.dpw.runner.shipment.services.entity.*;
 import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferContainerType;
 import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
 import com.dpw.runner.shipment.services.helper.JsonTestUtility;
 import com.dpw.runner.shipment.services.helpers.JsonHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
+import com.dpw.runner.shipment.services.kafka.dto.KafkaResponse;
+import com.dpw.runner.shipment.services.kafka.producer.KafkaProducer;
+import com.dpw.runner.shipment.services.masterdata.enums.MasterDataType;
 import com.dpw.runner.shipment.services.masterdata.request.CommonV1ListRequest;
 import com.dpw.runner.shipment.services.service.interfaces.IAuditLogService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
@@ -85,27 +43,12 @@ import com.dpw.runner.shipment.services.utils.CSVParsingUtil;
 import com.dpw.runner.shipment.services.utils.MasterDataUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
-import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import javax.servlet.http.HttpServletResponse;
 import org.apache.commons.lang3.StringUtils;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -119,6 +62,19 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
+import java.math.BigDecimal;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.parallel.ExecutionMode.CONCURRENT;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith({MockitoExtension.class, SpringExtension.class})
 @Execution(CONCURRENT)
@@ -214,7 +170,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         testContainer = jsonTestUtility.getTestContainer();
         testShipment = jsonTestUtility.getTestShipment();
         testPacking = jsonTestUtility.getTestPacking();
@@ -230,7 +186,7 @@ class ContainerServiceTest extends CommonMocks {
 
 
     @Test
-    public void testCreate_Success() {
+    void testCreate_Success() {
         ResponseEntity<IRunnerResponse> responseEntity = containerService.create(CommonRequestModel.buildRequest());
 
         Assertions.assertNull(responseEntity);
@@ -239,7 +195,7 @@ class ContainerServiceTest extends CommonMocks {
 
 
     @Test
-    public void testAttachPacks_Success() {
+    void testAttachPacks_Success() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -265,8 +221,8 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    @Disabled
-    public void testAttachPacks_ContainerNotFound() {
+    @Disabled("Skipped")
+    void testAttachPacks_ContainerNotFound() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -280,7 +236,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testAttachPacks_PackingNotFound() {
+    void testAttachPacks_PackingNotFound() {
         long containerId = 1L;
         List<Long> packsId = new ArrayList<>();
         packsId.add(100L);
@@ -297,7 +253,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testUpdate() throws RunnerException, NoSuchFieldException, JsonProcessingException, InvocationTargetException, IllegalAccessException, NoSuchMethodException {
+    void testUpdate() throws RunnerException{
         ResponseEntity<IRunnerResponse> responseEntity = containerService.update(CommonRequestModel.buildRequest());
 
         Assertions.assertNull(responseEntity);
@@ -312,8 +268,7 @@ class ContainerServiceTest extends CommonMocks {
         Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
 
         when(containerDao.findAll(any(), any())).thenReturn(page);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn((ContainerResponse) containerResponse);
-
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
         ResponseEntity<IRunnerResponse> responseEntity = containerService.list(commonRequestModel);
 
         assertNotNull(responseEntity);
@@ -328,7 +283,7 @@ class ContainerServiceTest extends CommonMocks {
         Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
 
         when(containerDao.findAll(any(), any())).thenReturn(page);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn((ContainerResponse) containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
         CompletableFuture<ResponseEntity<IRunnerResponse>> responseEntity = containerService.listAsync(request);
 
@@ -361,7 +316,7 @@ class ContainerServiceTest extends CommonMocks {
         ContainerResponse containerResponse = objectMapper.convertValue(testContainer, ContainerResponse.class);
 
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
         ResponseEntity<IRunnerResponse> responseEntity = containerService.retrieveById(commonRequestModel);
 
@@ -370,7 +325,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithNonNullContainer() {
+    void testCalculateUtilization_WithNonNullContainer() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.valueOf(100));
@@ -384,13 +339,13 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithNullContainer() {
+    void testCalculateUtilization_WithNullContainer() {
         Containers resultContainer = containerService.calculateUtilization(null);
         Assertions.assertNull(resultContainer);
     }
 
     @Test
-    public void testCalculateUtilization_WithZeroAllocatedWeight() {
+    void testCalculateUtilization_WithZeroAllocatedWeight() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.valueOf(100));
@@ -404,7 +359,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithZeroAllocatedVolume() {
+    void testCalculateUtilization_WithZeroAllocatedVolume() {
         Containers container = new Containers();
         container.setAchievedVolume(BigDecimal.valueOf(50));
         container.setAllocatedVolume(BigDecimal.ZERO);
@@ -418,7 +373,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateUtilization_WithNullAchievedVolumeAndWeight() {
+    void testCalculateUtilization_WithNullAchievedVolumeAndWeight() {
         Containers container = new Containers();
         container.setAllocatedVolume(BigDecimal.valueOf(100));
         container.setAllocatedWeight(BigDecimal.valueOf(1000));
@@ -430,16 +385,16 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testCalculateAchieved_AllocatedForSameUnit_Success() {
+    void testCalculateAchieved_AllocatedForSameUnit_Success() {
         testContainer.setId(1L);
         ContainerRequest containerRequest = objectMapper.convertValue(testContainer, ContainerRequest.class);
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(containerRequest);
         ContainerResponse containerResponse = objectMapper.convertValue(containerRequest, ContainerResponse.class);
 
         when(jsonHelper.convertValue(any(ContainerRequest.class), eq(Containers.class))).thenReturn(testContainer);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchieved_AllocatedForSameUnit(commonRequestModel);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedAllocatedForSameUnit(commonRequestModel);
 
         Assertions.assertNotNull(responseEntity);
         assertEquals(responseEntity, ResponseHelper.buildSuccessResponse(containerResponse));
@@ -470,7 +425,7 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.save(any(Containers.class))).thenReturn(testContainer);
         when(producer.getKafkaResponse(any() , anyBoolean())).thenReturn(new KafkaResponse());
         when(jsonHelper.convertToJson(any(KafkaResponse.class))).thenReturn(StringUtils.EMPTY);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(containerResponse);
 
         Packing packing = jsonTestUtility.getTestPacking();
         List<Packing> packingList = List.of(packing);
@@ -486,7 +441,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testValidateContainerNumber_Success() {
+    void testValidateContainerNumber_Success() {
         String validContainerNumber = "ABCD123456";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(validContainerNumber);
         Assertions.assertNotNull(responseEntity);
@@ -494,17 +449,9 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    public void testValidateContainerNumber_InvalidLength() {
+    void testValidateContainerNumber_InvalidLength() {
         String invalidLengthContainerNumber = "ABC123";
         ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidLengthContainerNumber);
-        Assertions.assertNotNull(responseEntity);
-        assertFalse(((ContainerNumberCheckResponse)((RunnerResponse)responseEntity.getBody()).getData()).isSuccess());
-    }
-
-    @Test
-    public void testValidateContainerNumber_InvalidCharacters() {
-        String invalidCharactersContainerNumber = "1234ABCD56";
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidCharactersContainerNumber);
         Assertions.assertNotNull(responseEntity);
         assertFalse(((ContainerNumberCheckResponse)((RunnerResponse)responseEntity.getBody()).getData()).isSuccess());
     }
@@ -514,15 +461,21 @@ class ContainerServiceTest extends CommonMocks {
         ListCommonRequest listCommonRequest = ListCommonRequest.builder().build();
         CommonRequestModel requestModel = CommonRequestModel.buildRequest(listCommonRequest);
         Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
-        ContainerResponse containerResponse = objectMapper.convertValue(testContainer, ContainerResponse.class);
 
         when(containerDao.findAll(any(), any())).thenReturn(page);
-        when(jsonHelper.convertValue(any(Containers.class), eq(ContainerResponse.class))).thenReturn(containerResponse);
-
         var response = containerService.getContainers(requestModel);
         assertNotNull(response);
     }
+    @Test
+    void getContainersWithIncludeColumns() {
+        ListCommonRequest listCommonRequest = ListCommonRequest.builder().includeColumns(List.of("id", "guid", "tenantId", "containerNumber")).build();
+        CommonRequestModel requestModel = CommonRequestModel.buildRequest(listCommonRequest);
+        Page<Containers> page = new PageImpl<>(List.of(testContainer) , PageRequest.of(0 , 10) , 1);
 
+        when(containerDao.findAll(any(), any())).thenReturn(page);
+        var response = containerService.getContainers(requestModel);
+        assertNotNull(response);
+    }
     @Test
     void getContainers_Failure() {
         CommonRequestModel requestModel = CommonRequestModel.buildRequest();
@@ -538,7 +491,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(List.of(2L));
         request.setShipmentId(3L);
         when(containerDao.findById(anyLong())).thenThrow(new RuntimeException());
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -550,7 +503,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(List.of(2L));
         request.setShipmentId(3L);
         when(containerDao.findById(anyLong())).thenReturn(Optional.empty());
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -563,7 +516,7 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -576,7 +529,7 @@ class ContainerServiceTest extends CommonMocks {
         request.setPacksId(new ArrayList<>());
         when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -592,12 +545,12 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
     @Test
-    void calculateAchievedQuantity_onPackDetach() {
+    void calculateAchievedQuantityOnPackDetach() {
         ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
         request.setContainerId(1L);
         request.setPacksId(List.of(2L));
@@ -606,7 +559,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -620,7 +573,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(new ArrayList<>()));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -634,7 +587,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
         testPacking.setId(2L);
         when(packingDao.findAll(any(), any())).thenReturn(null);
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantity_onPackDetach(CommonRequestModel.buildRequest(request));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
         assertNotNull(responseEntity);
     }
 
@@ -648,8 +601,8 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
         testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any())).thenReturn(new ArrayList<>());
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any(), any())).thenReturn(new ArrayList<>());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
         assertNotNull(responseEntity);
@@ -665,10 +618,10 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
         testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
-        testContainer.setShipmentsList(List.of(testShipment));
+        testContainer.setShipmentsList(Set.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any())).thenReturn(new ArrayList<>());
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any(), any())).thenReturn(new ArrayList<>());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
         assertNotNull(responseEntity);
@@ -685,7 +638,7 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
         testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
-        testContainer.setShipmentsList(List.of(testShipment));
+        testContainer.setShipmentsList(Set.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
@@ -705,10 +658,10 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
         testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
-        testContainer.setShipmentsList(List.of(testShipment));
+        testContainer.setShipmentsList(Set.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any())).thenReturn(new ArrayList<>());
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(masterDataUtils.createInBulkCommodityTypeRequest(any(), any(), any(), any(), any())).thenReturn(new ArrayList<>());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
         assertNotNull(responseEntity);
@@ -727,7 +680,7 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
         testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
         testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
-        testContainer.setShipmentsList(List.of(testShipment));
+        testContainer.setShipmentsList(Set.of(testShipment));
         when(containerDao.findAll(any(), any())).thenThrow(new RuntimeException());
         mockShipmentSettings();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.getContainersForSelection(CommonRequestModel.buildRequest(containerAssignListRequest));
@@ -851,7 +804,7 @@ class ContainerServiceTest extends CommonMocks {
         when(shipmentDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testShipment)));
         when(containerDao.save(any())).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.V1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.v1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
@@ -862,24 +815,24 @@ class ContainerServiceTest extends CommonMocks {
         when(containerDao.findByGuid(any())).thenReturn(List.of(testContainer));
         when(containerDao.save(any())).thenReturn(testContainer);
         when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.V1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.v1ContainerCreateAndUpdate(CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2()), false);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
     }
 
     @Test
-    void V1ContainerCreateAndUpdate_Failure() throws RunnerException{
+    void V1ContainerCreateAndUpdate_Failure(){
         when(containerDao.findByGuid(any())).thenThrow(new RuntimeException());
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(jsonTestUtility.getTestContainerRequestV2());
-        assertThrows(RuntimeException.class, () -> containerService.V1ContainerCreateAndUpdate(commonRequestModel, false));
+        assertThrows(RuntimeException.class, () -> containerService.v1ContainerCreateAndUpdate(commonRequestModel, false));
     }
 
     @Test
     void V1BulkContainerCreateAndUpdate() throws RunnerException{
         BulkContainerRequestV2 bulkContainerRequestV2 = BulkContainerRequestV2.builder().bulkContainers(List.of(jsonTestUtility.getTestContainerRequestV2())).build();
         ContainerService spyService = spy(containerService);
-        doReturn(new ResponseEntity<>(HttpStatus.OK)).when(spyService).V1ContainerCreateAndUpdate(any(), anyBoolean());
-        ResponseEntity<IRunnerResponse> responseEntity = spyService.V1BulkContainerCreateAndUpdate(CommonRequestModel.buildRequest(bulkContainerRequestV2));
+        doReturn(new ResponseEntity<>(HttpStatus.OK)).when(spyService).v1ContainerCreateAndUpdate(any(), anyBoolean());
+        ResponseEntity<IRunnerResponse> responseEntity = spyService.v1BulkContainerCreateAndUpdate(CommonRequestModel.buildRequest(bulkContainerRequestV2));
         assertNotNull(responseEntity);
     }
 
@@ -887,13 +840,13 @@ class ContainerServiceTest extends CommonMocks {
     void V1BulkContainerCreateAndUpdate_Failure() throws RunnerException{
         BulkContainerRequestV2 bulkContainerRequestV2 = BulkContainerRequestV2.builder().bulkContainers(List.of(jsonTestUtility.getTestContainerRequestV2())).build();
         ContainerService spyService = spy(containerService);
-        doThrow(new RunnerException()).when(spyService).V1ContainerCreateAndUpdate(any(), anyBoolean());
+        doThrow(new RunnerException()).when(spyService).v1ContainerCreateAndUpdate(any(), anyBoolean());
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(bulkContainerRequestV2);
-        assertThrows(RuntimeException.class, () -> spyService.V1BulkContainerCreateAndUpdate(commonRequestModel));
+        assertThrows(RuntimeException.class, () -> spyService.v1BulkContainerCreateAndUpdate(commonRequestModel));
     }
 
     @Test
-    void testExportContainers_Success() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Success() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -908,7 +861,7 @@ class ContainerServiceTest extends CommonMocks {
 
         Optional<ConsolidationDetails> consol = Optional.of(consolidationDetails);
         when(consolidationDetailsDao.findById(1L)).thenReturn(consol);
-        when(jsonHelper.convertValue(any(), eq(ContainerResponse.class))).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
+        when(commonUtils.setIncludedFieldsToResponse(any(), anySet(),any())).thenReturn(objectMapper.convertValue(testContainer, ContainerResponse.class));
 
         List<String> contHeaders = new ArrayList<>();
         contHeaders.add("containerNumber");
@@ -918,7 +871,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_ConsoleIdNull() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_ConsoleIdNull(){
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setFreeTimeNoOfDaysDetention(3L);
@@ -927,7 +880,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_ConsoleNotFound() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_ConsoleNotFound() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -938,7 +891,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_EmptyContainers() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_EmptyContainers() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -954,7 +907,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void testExportContainers_Failure_NullContainers() throws IOException, RunnerException, IllegalAccessException {
+    void testExportContainers_Failure_NullContainers() {
         HttpServletResponse response = new MockHttpServletResponse();
         ExportContainerListRequest request = new ExportContainerListRequest();
         request.setConsolidationId("1");
@@ -1055,7 +1008,7 @@ class ContainerServiceTest extends CommonMocks {
 
     @Test
     void calculateAchieved_AllocatedForSameUnit_failure() {
-        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchieved_AllocatedForSameUnit(null);
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedAllocatedForSameUnit(null);
         assertNotNull(responseEntity);
         assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
     }
@@ -1122,7 +1075,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void list_Failure() throws Exception{
+    void list_Failure(){
         CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest();
         ResponseEntity<IRunnerResponse> responseEntity = containerService.list(commonRequestModel);
         assertNotNull(responseEntity);
@@ -1130,12 +1083,12 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void uploadContainers_NullReq() throws Exception {
+    void uploadContainers_NullReq() {
         assertThrows(ValidationException.class, () -> containerService.uploadContainers(null));
     }
 
     @Test
-    void uploadContainers_NullConsoleId() throws Exception {
+    void uploadContainers_NullConsoleId(){
         BulkUploadRequest request = new BulkUploadRequest();
         assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
     }
@@ -1246,6 +1199,104 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
+    void uploadContainers_ContainerNumberAlreadyExists() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(false);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHandlingInfo(null);
+        Containers containers = new Containers();
+        containers.setGuid(UUID.randomUUID());
+        containers.setContainerNumber("CONT0000006");
+        containers.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(containers));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(containers));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_MultipleContainerOwnership() throws IOException {
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_CommodityTypeException() throws IOException {
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setCommodityCode("46321");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(ValidationException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
     void uploadContainers_SEA() throws Exception{
         BulkUploadRequest request = new BulkUploadRequest();
         request.setConsolidationId(1L);
@@ -1284,6 +1335,44 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
+    void uploadContainers_SEA2() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setContainerCount(1L);
+        testContainer.setIsOwnContainer(false);
+        testContainer.setIsShipperOwned(true);
+        testContainer.setHazardous(false);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode(null);
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
     void uploadContainers_AIR() throws Exception{
         BulkUploadRequest request = new BulkUploadRequest();
         request.setConsolidationId(1L);
@@ -1293,7 +1382,7 @@ class ContainerServiceTest extends CommonMocks {
         testContainer.setContainerNumber("CONT0000006");
         testContainer.setIsOwnContainer(true);
         testContainer.setIsShipperOwned(false);
-        testContainer.setHazardous(true);
+        testContainer.setHazardous(null);
         testContainer.setIsPart(true);
         testContainer.setContainerStuffingLocation("unloc");
         testContainer.setHazardousUn("hzUn");
@@ -1322,7 +1411,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void downloadContainers() throws RunnerException{
+    void downloadContainers(){
         HttpServletResponse response = new MockHttpServletResponse();
         BulkDownloadRequest request = new BulkDownloadRequest();
         request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
@@ -1330,7 +1419,6 @@ class ContainerServiceTest extends CommonMocks {
         request.setShipmentId("6");
         when(shipmentDao.findById(any())).thenReturn(Optional.of(testShipment));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
-//        when(shipmentsContainersMappingDao.findByShipmentId(any()))
         when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(jsonTestUtility.getTestConsolidation()));
         when(containerDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testContainer)));
         when(commonUtils.convertToList(anyList(), eq(ContainersExcelModel.class))).thenReturn(List.of(objectMapper.convertValue(testContainer, ContainersExcelModel.class)));
@@ -1338,7 +1426,7 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void downloadContainerEvents() throws Exception {
+    void downloadContainerEvents(){
         HttpServletResponse response = new MockHttpServletResponse();
         BulkDownloadRequest request = new BulkDownloadRequest();
         request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
@@ -1358,12 +1446,12 @@ class ContainerServiceTest extends CommonMocks {
     }
 
     @Test
-    void uploadContainerEvents_Failure() throws Exception {
+    void uploadContainerEvents_Failure() {
         assertThrows(ValidationException.class, () -> containerService.uploadContainerEvents(null));
     }
 
     @Test
-    void uploadContainerEvents_Failure_NullId() throws Exception {
+    void uploadContainerEvents_Failure_NullId() {
         BulkUploadRequest request = new BulkUploadRequest();
         assertThrows(ValidationException.class, () -> containerService.uploadContainerEvents(request));
     }
@@ -1375,12 +1463,13 @@ class ContainerServiceTest extends CommonMocks {
         c1.setId(1L);
         c1.setConsolidationId(1L);
         c1.setContainerNumber("C123");
+        c1.setShipmentsList(new HashSet<>(Collections.singletonList(ShipmentDetails.builder().bookingReference("DBFC-4317515-934863").build())));
         Containers c2 = new Containers();
         c2.setId(2L);
         c2.setContainerNumber("C456");
 
         List<Containers> containersList = Arrays.asList(c1,c2);
-        List<Containers> oldContainers = Arrays.asList(c1);
+        List<Containers> oldContainers = List.of(c1);
 
         V1TenantSettingsResponse v1TenantSettingsResponse = new V1TenantSettingsResponse();
         v1TenantSettingsResponse.setLogicAppIntegrationEnabled(true);
@@ -1392,7 +1481,6 @@ class ContainerServiceTest extends CommonMocks {
 
         when(jsonHelper.convertToJson(any(EventMessage.class))).thenReturn("jsonBody");
         when(modelMapper.map(any(), eq(ContainerBoomiUniversalJson.class))).thenReturn(containerBoomiUniversalJson);
-        when(consolidationDetailsDao.findById(1L)).thenReturn(Optional.of(ConsolidationDetails.builder().referenceNumber("ref123").build()));
 
         // Act
         containerService.pushContainersToDependentServices(containersList, oldContainers);
@@ -1400,6 +1488,483 @@ class ContainerServiceTest extends CommonMocks {
         // Assert
         verify(producer, times(1)).produceToKafka(eq("jsonBody"), any(), anyString());
         verify(sbUtils, times(1)).sendMessagesToTopic(eq(isbProperties), any(), anyList());
+    }
+
+    @Test
+    void testPushContainersToDependentServicesWithEmptyBookingRef() {
+        // Arrange
+        Containers c1 = new Containers();
+        c1.setId(1L);
+        c1.setConsolidationId(1L);
+        c1.setContainerNumber("C123");
+        c1.setShipmentsList(new HashSet<>(Collections.singletonList(ShipmentDetails.builder().bookingReference("").build())));
+        Containers c2 = new Containers();
+        c2.setId(2L);
+        c2.setContainerNumber("C456");
+
+        List<Containers> containersList = Arrays.asList(c1,c2);
+        List<Containers> oldContainers = Arrays.asList(c1);
+
+        V1TenantSettingsResponse v1TenantSettingsResponse = new V1TenantSettingsResponse();
+        v1TenantSettingsResponse.setLogicAppIntegrationEnabled(true);
+        v1TenantSettingsResponse.setTransportOrchestratorEnabled(true);
+        when(commonUtils.getCurrentTenantSettings()).thenReturn(v1TenantSettingsResponse);
+        // Act
+        containerService.pushContainersToDependentServices(containersList, oldContainers);
+        verify(producer, times(0)).produceToKafka(eq("jsonBody"), any(), anyString());
+        verify(sbUtils, times(0)).sendMessagesToTopic(eq(isbProperties), any(), anyList());
+    }
+
+    @Test
+    void getByModuleGuidAndModuleType_ValidShipmentGuid_ShouldReturnSuccessResponse() {
+        UUID validGuid = UUID.randomUUID();
+        // Given
+        String moduleGuid = validGuid.toString();
+        String moduleType = Constants.SHIPMENT;
+
+        ShipmentDetails shipmentDetails = new ShipmentDetails();
+        shipmentDetails.setContainersList(Set.of(new Containers()));
+
+        List<ContainerResponse> containerResponses = List.of(new ContainerResponse());
+
+        when(shipmentDao.findByGuid(validGuid)).thenReturn(Optional.of(shipmentDetails));
+        when(jsonHelper.convertValueToList(any(), eq(ContainerResponse.class))).thenReturn(containerResponses);
+
+        // When
+        ResponseEntity<IRunnerResponse> response = containerService.getByModuleGuidAndModuleType(moduleGuid, moduleType);
+
+        // Then
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+    }
+
+    @Test
+    void getByModuleGuidAndModuleType_ValidConsolidationGuid_ShouldReturnSuccessResponse() {
+        UUID validGuid = UUID.randomUUID();
+        // Given
+        String moduleGuid = validGuid.toString();
+        String moduleType = Constants.CONSOLIDATION;
+
+        ConsolidationDetails consolidationDetails = new ConsolidationDetails();
+        consolidationDetails.setContainersList(List.of(new Containers()));
+
+        List<ContainerResponse> containerResponses = List.of(new ContainerResponse());
+
+        when(consolidationDetailsDao.findByGuid(validGuid)).thenReturn(Optional.of(consolidationDetails));
+        when(jsonHelper.convertValueToList(any(), eq(ContainerResponse.class))).thenReturn(containerResponses);
+
+        // When
+        ResponseEntity<IRunnerResponse> response = containerService.getByModuleGuidAndModuleType(moduleGuid, moduleType);
+
+        // Then
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+    }
+    @Test
+    void uploadContainers_SEA4() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA5() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA6() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        testShipment.setShipmentType(Constants.CARGO_TYPE_FCL);
+        when(shipmentDao.findById(any())).thenReturn(Optional.of(testShipment));
+        assertThrows(RuntimeException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA7() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(shipmentDao.findById(any())).thenReturn(Optional.ofNullable(testShipment));
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA8() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("abcd");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(RuntimeException.class, () -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_AIR2() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_AIR);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(null);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(consolidationService.calculateVolumeWeight(any(), any(), any(), any(), any())).thenReturn(jsonTestUtility.getVolumeWeightChargeable());
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_AIR3() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(null);
+        testContainer.setIsPart(true);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass");
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        when(shipmentDao.findById(any())).thenReturn(Optional.empty());
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach2() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        testContainer.setAllocatedVolumeUnit(Constants.VOLUME_UNIT_LITRE);
+        testContainer.setAllocatedWeightUnit(Constants.WEIGHT_UNIT_MG);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach3() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach4() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAchievedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setAchievedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        testContainer.setAllocatedVolumeUnit(Constants.VOLUME_UNIT_M3);
+        testContainer.setAllocatedWeightUnit(Constants.WEIGHT_UNIT_KG);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @Test
+    void calculateAchievedQuantityOnPackDetach5() {
+        ContainerPackADInShipmentRequest request = new ContainerPackADInShipmentRequest();
+        request.setContainerId(1L);
+        request.setPacksId(List.of(2L));
+        request.setShipmentId(3L);
+        testContainer.setAllocatedVolumeUnit(Constants.VOLUME_UNIT_LITRE);
+        testContainer.setAllocatedWeightUnit(Constants.WEIGHT_UNIT_MG);
+        when(containerDao.findById(anyLong())).thenReturn(Optional.of(testContainer));
+        when(shipmentDao.findById(anyLong())).thenReturn(Optional.of(testShipment));
+        testPacking.setId(2L);
+        when(packingDao.findAll(any(), any())).thenReturn(new PageImpl<>(List.of(testPacking)));
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.calculateAchievedQuantityOnPackDetach(CommonRequestModel.buildRequest(request));
+        assertNotNull(responseEntity);
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"1234ABCD56", "ABCD12345A", "ABCD12345%", "aBCD12345%", "ABCD123456%", "ABCD123456A", "ABCD1234561"})  // Runs test for both true and false cases
+    void testValidateContainerNumber_InvalidCharacters(String invalidCharactersContainerNumber) {
+        ResponseEntity<IRunnerResponse> responseEntity = containerService.validateContainerNumber(invalidCharactersContainerNumber);
+        Assertions.assertNotNull(responseEntity);
+        assertFalse(((ContainerNumberCheckResponse)((RunnerResponse)responseEntity.getBody()).getData()).isSuccess());
+    }
+
+    @Test
+    void uploadContainers_SEA9() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass1");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    masterDataMap.putAll(jsonTestUtility.getMasterDataMapWithSameCommodity());
+
+                    return List.of(testContainer);
+                });
+        assertThrows(RuntimeException.class ,() -> containerService.uploadContainers(request));
+    }
+
+    @Test
+    void uploadContainers_SEA10() throws Exception{
+        BulkUploadRequest request = new BulkUploadRequest();
+        request.setConsolidationId(1L);
+        request.setShipmentId(3L);
+        request.setTransportMode(Constants.TRANSPORT_MODE_SEA);
+        testContainer.setGuid(UUID.randomUUID());
+        testContainer.setContainerNumber("CONT0000006");
+        testContainer.setIsOwnContainer(true);
+        testContainer.setIsShipperOwned(false);
+        testContainer.setHazardous(true);
+        testContainer.setIsPart(false);
+        testContainer.setContainerStuffingLocation("unloc");
+        testContainer.setHazardousUn("hzUn");
+        testContainer.setCommodityCode("680510");
+        testContainer.setHandlingInfo("handlingInfo");
+        testContainer.setChargeableUnit(Constants.WEIGHT_UNIT_KG);
+        testContainer.setChargeable(new BigDecimal(3453));
+        testContainer.setGrossVolume(new BigDecimal(432));
+        testContainer.setDgClass("dgClass1");
+        testContainer.setContainerCount(1L);
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        when(containerDao.findByConsolidationId(any())).thenReturn(List.of(testContainer));
+        ArgumentCaptor<Map> captor = ArgumentCaptor.forClass(Map.class);
+        when(parser.parseExcelFile(any(), any(), any(), (Map<String, Set<String>>) captor.capture(), any(), any(), any(), any(), any()))
+                .thenAnswer(invocation -> {
+
+                    Map<String, Set<String>> masterDataMap = (Map<String, Set<String>>) captor.getValue();
+                    masterDataMap.clear();
+                    var a = jsonTestUtility.getMasterDataMapWithSameCommodity();
+                    a.remove(MasterDataType.DG_CLASS.getDescription());
+                    masterDataMap.putAll(a);
+
+                    return List.of(testContainer);
+                });
+        when(containerDao.saveAll(any())).thenReturn(List.of(testContainer));
+        assertDoesNotThrow(() -> containerService.uploadContainers(request));
     }
 
 }
